--- a/ProjetoBackend/Views/Home/Index.cshtml
+++ b/ProjetoBackend/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Atividade Entrega</h1>
-    <p>Utlize essa página para falar sobre o projeto</p>
+    <h1 class="display-4">ProtMind</h1>
+    <p>Conheça o futuro com o ProtMind com controle total sob seus movimentos em jogos digitais </p>
+
 </div>
