--- a/ProjetoBackend/Views/Shared/_Layout.cshtml
+++ b/ProjetoBackend/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Produtos" asp-action="Index">Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Servicos" asp-action="Index">Servicos</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Servicos" asp-action="Index">Serviços</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Vendas" asp-action="Index">Vendas</a>
