--- a/ProjetoBackend/Views/Clientes/Create.cshtml
+++ b/ProjetoBackend/Views/Clientes/Create.cshtml
@@ -1,64 +1,116 @@
 ﻿@model ProjetoBackend.Models.Cliente
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adicionar Cliente";
 }
 
-<h1>Create</h1>
-
-<h4>Cliente</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+<div< class="row justify-content-center">
+            <div class="row col-md-8 ">
+    <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+            <div class="row mt-2">
+                <div class="col-12 col-md-8">
+                 <div class="form-group">
+                         <label asp-for="Nome" class="control-label"></label>
+                         <input asp-for="Nome" class="form-control" />
+                         <span asp-validation-for="Nome" class="text-danger"></span>
+                     </div>
+                </div>
+                <div class="col-12 col-md">
+                    <div class="form-group">
+                        <label asp-for="CnpjCpf" class="control-label"></label>
+                         <input asp-for="CnpjCpf" class="form-control" />
+                          <span asp-validation-for="CnpjCpf" class="text-danger"></span>
+                     </div>
+                </div>
             </div>
-            <div class="form-group">
+            <div class="row mt-2">
+                <div class="col-12 col-md-8">
+                <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CnpjCpf" class="control-label"></label>
-                <input asp-for="CnpjCpf" class="form-control" />
-                <span asp-validation-for="CnpjCpf" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Celular" class="control-label"></label>
-                <input asp-for="Celular" class="form-control" oninput="formatarTelefone(this)" id="telefone" />
-                <span asp-validation-for="Celular" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+                </div>
+               </div>
+               <div class="col-12 col-md">
+                   <div class="form-group">
                 <label asp-for="DataNascimento" class="control-label"></label>
                 <input type="date" asp-for="DataNascimento" class="form-control" />
                 <span asp-validation-for="DataNascimento" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-12 col-md-6">
+                       <div class="form-group">
+                <label asp-for="Celular" class="control-label"></label>
+                <input asp-for="Celular" class="form-control" oninput="formatarTelefone(this)" id="telefone" />
+                <span asp-validation-for="Celular" class="text-danger"></span>
+                 </div>
+                </div>
+            </div>
 
-                
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="form-group">
                 <input type="hidden" asp-for="DataCadastro" class="form-control" />
-
             </div>
+
             <div class="form-group">
 
-                <input type="hidden"  asp-for="CadastroAtivo" class="form-control" />
+                <input type="hidden" asp-for="CadastroAtivo" class="form-control" />
 
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="row mt-2">
+                <div class="col col-md">
+                <div class="btn w-100 btn-outline-danger">
+                     <a asp-action="Index" class="text-decoration-none text-danger ">Cancelar</a>
+                </div>
+                </div>
+                <div class="col-3 col-md-3"></div>
+                <div class="col col-md">
+
+             <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary w-100" />
             </div>
+                </div>
+            </div>
+    </form>
+            </div>
+
+
+   <!--
+    <div class="col-md-4">
+        <form asp-action="Create">
+
+
+
+
+
+
+
         </form>
     </div>
+    -->
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
