--- a/ProjetoBackend/Views/Shared/_LoginPartial.cshtml
+++ b/ProjetoBackend/Views/Shared/_LoginPartial.cshtml
@@ -6,11 +6,11 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+            <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Bem Vindo(a) @User.Identity?.Name!</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button type="submit" class="nav-link btn btn-link text-light">Sair</button>
             </form>
         </li>
     }
@@ -18,7 +18,7 @@
     {
 
         <li class="nav-item btn pt-0 pb-0" style="background: #808080">
-            <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register">Cadastrar</a>
         </li>
         <li class="nav-item btn pt-0 pb-0" style="background: #DC5F00">
             <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Login">Login</a>
