--- a/ProjetoBackend/Views/Fornecedores/Index.cshtml
+++ b/ProjetoBackend/Views/Fornecedores/Index.cshtml
@@ -4,10 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Fornecedores</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <div class="btn btn-lg" style=" background:#DC5F00">
+        <a asp-action="Create" class="text-decoration-none text-light">Cadastrar</a>
+    </div>
 </p>
 <table class="table table-responsive table-dark table-striped">
     <thead>
