--- a/ProjetoBackend/Views/Clientes/Edit.cshtml
+++ b/ProjetoBackend/Views/Clientes/Edit.cshtml
@@ -1,64 +1,97 @@
 ﻿@model ProjetoBackend.Models.Cliente
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Edit</h1>
 
-<h4>Cliente</h4>
+
+<h1>Editar Cliente</h1>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center">
+    <div class="col-md-8">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ClienteId" />
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+
+            <div class="row">
+                <div class="col-12 col-md-8 mt-2">
+                    <div class="form-group">
+                        <label asp-for="Nome" class="control-label"></label>
+                        <input asp-for="Nome" class="form-control" />
+                        <span asp-validation-for="Nome" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-12 col-md mt-2">
+                    <div class="form-group">
+                        <label asp-for="CnpjCpf" class="control-label"></label>
+                        <input asp-for="CnpjCpf" class="form-control" />
+                        <span asp-validation-for="CnpjCpf" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+            <div class="row">
+                <div class="col-12 col-md-8 mt-2">
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-12 col-md mt-2">
+                    <div class="form-group">
+                        <label asp-for="Celular" class="control-label"></label>
+                        <input asp-for="Celular" class="form-control" />
+                        <span asp-validation-for="Celular" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="CnpjCpf" class="control-label"></label>
-                <input asp-for="CnpjCpf" class="form-control" />
-                <span asp-validation-for="CnpjCpf" class="text-danger"></span>
+            <div class="row ">
+                <div class="col-12 col-md-6 mt-2">
+                    <div class="form-group">
+                        <label asp-for="DataNascimento" class="control-label"></label>
+                        <input asp-for="DataNascimento" class="form-control" />
+                        <span asp-validation-for="DataNascimento" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 mt-2">
+                    <div class="form-group">
+                        <label asp-for="DataCadastro" class="control-label"></label>
+                        <input asp-for="DataCadastro" class="form-control" />
+                        <span asp-validation-for="DataCadastro" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-12 col-md mt-2">
+                    <div class="form-group">
+                        <label asp-for="CadastroAtivo" class="control-label"></label>
+                        <input asp-for="CadastroAtivo" class="form-control" />
+                        <span asp-validation-for="CadastroAtivo" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Celular" class="control-label"></label>
-                <input asp-for="Celular" class="form-control" />
-                <span asp-validation-for="Celular" class="text-danger"></span>
+            <div class="row">
+                <div class="col-12 col-md-4 mt-2">
+                    <div class="btn btn-outline-danger w-100 mt-2">
+                        <a asp-action="Index" class="text-danger text-decoration-none ">Cancelar</a>
+                    </div>
+                </div>
+                <div class="d-sm-none d-md-block col-md-4 mt-2"></div>
+                <div class="col-12 col-md mt-2">
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="w-100 btn btn-primary" />
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="DataNascimento" class="control-label"></label>
-                <input asp-for="DataNascimento" class="form-control" />
-                <span asp-validation-for="DataNascimento" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataCadastro" class="control-label"></label>
-                <input asp-for="DataCadastro" class="form-control" />
-                <span asp-validation-for="DataCadastro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CadastroAtivo" class="control-label"></label>
-                <input asp-for="CadastroAtivo" class="form-control" />
-                <span asp-validation-for="CadastroAtivo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+
+
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
