--- a/ProjetoBackend/Views/Clientes/Create.cshtml
+++ b/ProjetoBackend/Views/Clientes/Create.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Adicionar Cliente";
 }
+<h2>Cadastro de Cliente</h2>
 
 <hr />
 <div class="row justify-content-center">
@@ -70,7 +71,7 @@
                 <div class="col col-md mt-2">
 
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-primary w-100" />
+                        <input type="submit" value="Criar" class="btn btn-primary w-100" />
                     </div>
                 </div>
             </div>
