--- a/ProjetoBackend/Views/Fornecedores/Index.cshtml
+++ b/ProjetoBackend/Views/Fornecedores/Index.cshtml
@@ -46,9 +46,13 @@
                     @Html.DisplayFor(modelItem => item.CnpjCpf)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.FornecedorId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.FornecedorId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.FornecedorId">Delete</a>
+                    <div class=" btn btn-outline-primary">
+                        <a asp-action="Edit" asp-route-id="@item.FornecedorId" class="text-primary text-decoration-none">Editar</a>
+                    </div>
+                    |
+                    <div class="btn btn-outline-danger">
+                        <a asp-action="Delete" asp-route-id="@item.FornecedorId" class="text-danger text-decoration-none">Delete</a>
+                    </div>
                 </td>
             </tr>
         }
