--- a/ProjetoBackend/Views/Produtos/Edit.cshtml
+++ b/ProjetoBackend/Views/Produtos/Edit.cshtml
@@ -47,13 +47,13 @@
             <div class="row">
                 <div class="col-12 col-md mt-2">
                     <div class="btn btn-outline-danger w-100">
-                        <a asp-action="Index" class="text-danger text-decoration-none">Back to List</a>
+                        <a asp-action="Index" class="text-danger text-decoration-none">Cancelar</a>
                     </div>
                 </div>
                 <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
                 <div class="col-12 col-md mt-2">
                     <div class="form-group">
-                        <input type="submit" value="Save" class="btn btn-primary w-100" />
+                        <input type="submit" value="Salvar" class="btn btn-primary w-100" />
                     </div>
                 </div>
             </div>
