--- a/ProjetoBackend/Views/Servicos/Create.cshtml
+++ b/ProjetoBackend/Views/Servicos/Create.cshtml
@@ -4,35 +4,48 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Serviços</h1>
 
-<h4>Servico</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center">
+    <div class="col-md-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+            <div class="row">
+                <div class="col-12 col-md-8 mt2">
+                    <div class="form-group">
+                        <label asp-for="Nome" class="control-label"></label>
+                        <input asp-for="Nome" class="form-control" />
+                        <span asp-validation-for="Nome" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-12 col-md mt2">
+                    <div class="form-group">
+                        <label asp-for="ValorServico" class="control-label"></label>
+                        <input asp-for="ValorServico" class="form-control" />
+                        <span asp-validation-for="ValorServico" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ValorServico" class="control-label"></label>
-                <input asp-for="ValorServico" class="form-control" />
-                <span asp-validation-for="ValorServico" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="row">
+                <div class="col-12 col-md mt-2">
+                    <div class="btn btn-outline-danger w-100">
+                        <a asp-action="Index" class="text-danger text-decoration-none">Cancelar</a>
+                    </div>
+                </div>
+                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                <div class="col-12 col-md mt-2">
+                    <div class="form-group">
+                        <input type="submit" value="Criar" class="btn btn-primary w-100" />
+                    </div>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
