--- a/ProjetoBackend/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ProjetoBackend/Areas/Identity/Pages/Account/Login.cshtml
@@ -26,11 +26,11 @@
                 <div class="checkbox mb-3">
                     <label asp-for="Input.RememberMe" class="form-label">
                         <input class="form-check-input" asp-for="Input.RememberMe" />
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
+                        Lembre-me
                     </label>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg text-light mb-3" style="background: #DC5F00">Log in</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg text-light mb-3" style="background: #DC5F00">Login</button>
                 </div>
                 <div>
                     <p>
