--- a/ProjetoBackend/Views/Shared/_Layout.cshtml
+++ b/ProjetoBackend/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Fornecedores" asp-action="Index">Fornecedores</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Fornecedors" asp-action="Index">Fornecedores</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Categorias" asp-action="Index">Categorias de Produtos</a>
