--- a/ProjetoBackend/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/ProjetoBackend/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Redefinir senha";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
+<h1>Esqueceu sua senha?</h1>
+<h2>Entre com email</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
