--- a/ProjetoBackend/Views/Compras/Create.cshtml
+++ b/ProjetoBackend/Views/Compras/Create.cshtml
@@ -14,8 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FornecedorId" class="control-label"></label>
-                <input asp-for="FornecedorId" class="form-control" />
-                <span asp-validation-for="FornecedorId" class="text-danger"></span>
+                <select asp-for="FornecedorId" class ="form-control" asp-items="ViewBag.FornecedorId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="DataCompra" class="control-label"></label>
