--- a/ProjetoBackend/Views/Compras/Edit.cshtml
+++ b/ProjetoBackend/Views/Compras/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="CompraId" />
             <div class="form-group">
                 <label asp-for="FornecedorId" class="control-label"></label>
-                <input asp-for="FornecedorId" class="form-control" />
+                <select asp-for="FornecedorId" class="form-control" asp-items="ViewBag.FornecedorId"></select>
                 <span asp-validation-for="FornecedorId" class="text-danger"></span>
             </div>
             <div class="form-group">
