--- a/ProjetoBackend/Views/Fornecedors/Create.cshtml
+++ b/ProjetoBackend/Views/Fornecedors/Create.cshtml
@@ -1,22 +1,39 @@
 ﻿@model ProjetoBackend.Models.Fornecedor
 
 @{
-    ViewData["Title"] = "Cadastrar";
+    ViewData["Title"] = "Create";
 }
 
-<h2>Cadastro de Fornecedor</h2>
+<h1>Fornecedores</h1>
 
 <hr />
 <div class="row justify-content-center">
     <div class="col-md-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="row">
-                <div class="col-12 col-md-8 mt-2">
-                    <div class="form-group">
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-12 col-md-8 mt-2">
+
                         <label asp-for="Nome" class="control-label"></label>
                         <input asp-for="Nome" class="form-control" />
                         <span asp-validation-for="Nome" class="text-danger"></span>
+                    </div>
+                    <div class="col-12 col-md mt-2">
+                        <div class="form-group">
+                            <label asp-for="Email" class="control-label"></label>
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-8 mt-2">
+                    <div class="form-group">
+                        <label asp-for="Celular" class="control-label"></label>
+                        <input asp-for="Celular" class="form-control" />
+                        <span asp-validation-for="Celular" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-12 col-md mt-2">
@@ -24,22 +41,6 @@
                         <label asp-for="CnpjCpf" class="control-label"></label>
                         <input asp-for="CnpjCpf" class="form-control" />
                         <span asp-validation-for="CnpjCpf" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-8 mt-2">
-                    <div class="form-group">
-                        <label asp-for="Email" class="control-label"></label>
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-12 col-md mt-2">
-                    <div class="form-group">
-                        <label asp-for="Celular" class="control-label"></label>
-                        <input asp-for="Celular" class="form-control" />
-                        <span asp-validation-for="Celular" class="text-danger"></span>
                     </div>
                 </div>
             </div>
@@ -59,8 +60,6 @@
         </form>
     </div>
 </div>
-
-
 
 @section Scripts {
     @{
