--- a/ProjetoBackend/Views/Fornecedors/Edit.cshtml
+++ b/ProjetoBackend/Views/Fornecedors/Edit.cshtml
@@ -4,15 +4,17 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Editar Fornecedor</h2>
+<h1>Editar Fornecedor</h1>
+
 <hr />
 <div class="row justify-content-center">
-    <div class="col-md-8 ">
+    <div class="col-md-8">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="FornecedorId" />
             <div class="row">
                 <div class="col-12 col-md-8 mt-2">
+
                     <div class="form-group">
                         <label asp-for="Nome" class="control-label"></label>
                         <input asp-for="Nome" class="form-control" />
@@ -20,26 +22,29 @@
                     </div>
                 </div>
                 <div class="col-12 col-md mt-2">
-                    <div class="form-group">
-                        <label asp-for="CnpjCpf" class="control-label"></label>
-                        <input asp-for="CnpjCpf" class="form-control" />
-                        <span asp-validation-for="CnpjCpf" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-8 mt-2">
+
                     <div class="form-group">
                         <label asp-for="Email" class="control-label"></label>
                         <input asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="col-12 col-md mt-2">
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-8 mt-2">
+
                     <div class="form-group">
                         <label asp-for="Celular" class="control-label"></label>
                         <input asp-for="Celular" class="form-control" />
                         <span asp-validation-for="Celular" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-12 col-md mt-2">
+
+                    <div class="form-group">
+                        <label asp-for="CnpjCpf" class="control-label"></label>
+                        <input asp-for="CnpjCpf" class="form-control" />
+                        <span asp-validation-for="CnpjCpf" class="text-danger"></span>
                     </div>
                 </div>
             </div>
@@ -52,15 +57,13 @@
                 <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
                 <div class="col-12 col-md mt-2">
                     <div class="form-group">
-                        <input type="submit" value="Save" class="btn btn-primary w-100" />
+                        <input type="submit" value="Salvar" class="btn btn-primary w-100" />
                     </div>
                 </div>
             </div>
         </form>
     </div>
 </div>
-
-
 
 @section Scripts {
     @{
