--- a/ProjetoBackend/Views/Fornecedors/Index.cshtml
+++ b/ProjetoBackend/Views/Fornecedors/Index.cshtml
@@ -11,7 +11,7 @@
         <a asp-action="Create" class="text-decoration-none text-light">Cadastrar</a>
     </div>
 </p>
-<table class="table table-responsive table-dark table-striped">
+<table class="table table-dark talbe-responsive">
     <thead>
         <tr>
             <th>
@@ -46,12 +46,11 @@
                     @Html.DisplayFor(modelItem => item.CnpjCpf)
                 </td>
                 <td>
-                    <div class=" btn btn-outline-primary">
+                    <div class="btn btn-outline-primary">
                         <a asp-action="Edit" asp-route-id="@item.FornecedorId" class="text-primary text-decoration-none">Editar</a>
                     </div>
-                    |
                     <div class="btn btn-outline-danger">
-                        <a asp-action="Delete" asp-route-id="@item.FornecedorId" class="text-danger text-decoration-none">Delete</a>
+                        <a asp-action="Delete" asp-route-id="@item.FornecedorId" class="text-danger text-decoration-none">Deletar</a>
                     </div>
                 </td>
             </tr>
