--- a/ProjetoBackend/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/ProjetoBackend/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,10 +1,14 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Redefinir senha";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>
+    <p>
+        Verificação de Email
+    </p>
+</h1>
 <p>
-    Please check your email to reset your password.
+    Para continuar acesse o link enviado via email.
 </p>
