--- a/ProjetoBackend/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/ProjetoBackend/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -7,16 +7,26 @@
 <h1>Esqueceu sua senha?</h1>
 <h2>Entre com email</h2>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+
+<div class="row justify-content-center">
+    <div class="col-md-4 bg-black p-5">
+        <div>
+            <p class="fs-3">
+                Buscar com email
+            </p>
+        </div>
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            <div class="col-12">
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                    <label asp-for="Input.Email" class="form-label"></label>
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+            <div class="col-12">
+                <button type="submit" class="w-100 btn btn-lg btn-primary">Redefinir Sanha</button>
+            </div>
         </form>
     </div>
 </div>
