alteração da index

--- a/ProjetoBackend/Views/Categorias/Index.cshtml
+++ b/ProjetoBackend/Views/Categorias/Index.cshtml
@@ -8,7 +8,7 @@
 
 <p>
     <div class="btn btn-lg" style="background: #DC5F00">
-        <a asp-action="Create" class="text-light text-decoration-none">Criar</a>
+        <a asp-action="Create" class="text-light text-decoration-none">Cadastrar</a>
     </div>
 </p>
 <table class="table table-responsive table-striped table-dark">
