--- a/ProjetoBackend/Views/Clientes/Index.cshtml
+++ b/ProjetoBackend/Views/Clientes/Index.cshtml
@@ -17,7 +17,7 @@
 
 <p>
     <div class="btn btn-lg" style="background: #DC5F00">
-        <a asp-action="Create" class=" text-light text-decoration-none">Adicionar</a>
+        <a asp-action="Create" class=" text-light text-decoration-none">Cadastrar</a>
     </div>
 </p>
 <table class="table table-responsive table-dark table-striped">
