--- a/ProjetoBackend/Views/Compras/Index.cshtml
+++ b/ProjetoBackend/Views/Compras/Index.cshtml
@@ -29,7 +29,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Fornecedor.Celular)
+                    @Html.DisplayFor(modelItem => item.Fornecedor.Nome)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.DataCompra)
@@ -38,9 +38,8 @@
                     @Html.DisplayFor(modelItem => item.ValorTotal)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.CompraId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.CompraId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.CompraId">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.CompraId" class="text-decoration-none btn btn-outline-primary">Editar</a> |
+                    <a asp-action="Delete" asp-route-id="@item.CompraId" class="text-decoration-none btn btn-outline-danger">Deletar</a>
                 </td>
             </tr>
         }
