--- a/ProjetoBackend/Views/Shared/_Layout.cshtml
+++ b/ProjetoBackend/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
 
     <footer class="border-top footer text-muted bg-black ">
         <div class="container text-light">
-            &copy; 2024 - ProjetoBackend - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - Protmind - <a asp-area="" asp-controller="Home" asp-action="Privacy">Politicas de privacidade</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
