--- a/ProjetoBackend/Views/Clientes/Index.cshtml
+++ b/ProjetoBackend/Views/Clientes/Index.cshtml
@@ -85,7 +85,7 @@
                     </div>
                     |
                     <div class="btn btn-outline-danger">
-                        <a asp-action="Delete" asp-route-id="@item.ClienteId" class="   ">Deletar</a>
+                        <a asp-action="Delete" asp-route-id="@item.ClienteId" class="text-danger text-decoration-none ">Deletar</a>
                     </div>
                 </td>
             </tr>
