--- a/ProjetoBackend/Views/Clientes/Edit.cshtml
+++ b/ProjetoBackend/Views/Clientes/Edit.cshtml
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md mt-2">
-                    <label asp-for="CadastroAtivo" class="form-label fw-bold text-white">Ativo</label>
+                    <label asp-for="CadastroAtivo" class="form-label text-white mb-0">Ativo</label>
                     <select asp-for="CadastroAtivo" class="form-control" asp-items="ViewBag.Ativo"></select>
                     <span asp-validation-for="CadastroAtivo" class="text-danger"></span>
                 </div>
@@ -76,7 +76,7 @@
                 <div class="d-sm-none d-md-block col-md-4 mt-2"></div>
                 <div class="col-12 col-md mt-2">
                     <div class="form-group">
-                        <input type="submit" value="Save" class="w-100 btn btn-primary" />
+                        <input type="submit" value="Salvar" class="w-100 btn btn-primary" />
                     </div>
                 </div>
             </div>
