--- a/ProjetoBackend/Views/Clientes/Delete.cshtml
+++ b/ProjetoBackend/Views/Clientes/Delete.cshtml
@@ -1,60 +1,84 @@
 ﻿@model ProjetoBackend.Models.Cliente
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+
+<h3>Deletar</h3>
 <div>
     <h4>Cliente</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CnpjCpf)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CnpjCpf)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Celular)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Celular)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataNascimento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataNascimento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataCadastro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataCadastro)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CadastroAtivo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CadastroAtivo)
-        </dd>
+        <div class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.Nome)
+            </dt>
+            <dd class="col-12 col-md-3">
+                @Html.DisplayFor(model => model.Nome)
+            </dd>
+        </div>
+        <div class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
+            <dd class="col-12 col-md-3">
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+        </div>
+        <div class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.CnpjCpf)
+            </dt>
+            <dd class="col-12 col-md-3">
+                @Html.DisplayFor(model => model.CnpjCpf)
+            </dd>
+        </div>
+        <div class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.Celular)
+            </dt>
+            <dd class="col-12 col-md-3">
+                @Html.DisplayFor(model => model.Celular)
+            </dd>
+        </div>
+        <div class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.DataNascimento)
+            </dt>
+            <dd class="col-12 col-md-3">
+                @Html.DisplayFor(model => model.DataNascimento)
+            </dd>
+        </div>
+        <div class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.DataCadastro)
+            </dt>
+            <dd class="col-12 col-md-3">
+                @Html.DisplayFor(model => model.DataCadastro)
+            </dd>
+        </div>
+        <div class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.CadastroAtivo)
+            </dt>
+            <dd class="col-12 col-md-3">
+
+                @{
+                    @if (Model.CadastroAtivo == true)
+                    {
+                        <span>Sim</span>
+                    }
+                    else
+                    {
+                        <span>Não</span>
+                    }
+                }
+            </dd>
+        </div>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="ClienteId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
