--- a/ProjetoBackend/Views/Produtos/Create.cshtml
+++ b/ProjetoBackend/Views/Produtos/Create.cshtml
@@ -21,7 +21,7 @@
                 <div class="col-12 col-md mt-2">
                     <div class="form-group">
                         <label asp-for="Preco" class="control-label"></label>
-                        <input asp-for="Preco" class="form-control" />
+                        <input type="number" step="0.01" asp-for="Preco" class="form-control" />
                         <span asp-validation-for="Preco" class="text-danger"></span>
                     </div>
                 </div>
