--- a/ProjetoBackend/Views/Servicos/Edit.cshtml
+++ b/ProjetoBackend/Views/Servicos/Edit.cshtml
@@ -23,7 +23,7 @@
                 <div class="col-12 col-md mt-2">
                     <div class="form-group">
                         <label asp-for="ValorServico" class="control-label"></label>
-                        <input asp-for="ValorServico" class="form-control" />
+                        <input type="number" step="0.01" asp-for="ValorServico" class="form-control" />
                         <span asp-validation-for="ValorServico" class="text-danger"></span>
                     </div>
                 </div>
