--- a/ProjetoBackend/Views/Clientes/Create.cshtml
+++ b/ProjetoBackend/Views/Clientes/Create.cshtml
@@ -63,9 +63,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md mt-2">
-                    <div class="btn w-100 btn-outline-danger">
-                        <a asp-action="Index" class="text-decoration-none text-danger ">Cancelar</a>
-                    </div>
+                    <a asp-action="Index" class="text-decoration-none text-danger btn w-100 btn-outline-danger">Cancelar</a>
                 </div>
                 <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
                 <div class="col col-md mt-2">
