--- a/ProjetoBackend/Views/Home/Sobre.cshtml
+++ b/ProjetoBackend/Views/Home/Sobre.cshtml
@@ -1,9 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Sobre a Equipe";
 }
+<div class="container">
 
-<h1>Equipe:</h1>
-<h4>Matheus</h4>
-<p class="">Matheus atua como Diretor de Operações e Estratégia, com um perfil altamente analítico e focado em resultados. Formado em administração com ênfase em inovação, ele é responsável por coordenar as operações e definir as diretrizes estratégicas da startup. Matheus é conhecido por sua visão de mercado e habilidade em identificar oportunidades, o que o torna fundamental para o crescimento e a estabilidade da empresa. Ele se dedica a alinhar a equipe e os recursos da startup às tendências mais recentes e às demandas dos clientes.</p>
-<h4>Pedro</h4>
-<p>Pedro, Diretor de Tecnologia, é o especialista em desenvolvimento e inovação técnica. Com uma forte formação em engenharia de software e experiência no uso de tecnologias avançadas, como inteligência artificial e blockchain, Pedro é responsável por liderar a criação de produtos e supervisionar a equipe de desenvolvimento. Sua abordagem prática e visão de futuro impulsionam a startup a buscar soluções disruptivas e de ponta, atendendo com precisão às necessidades dos usuários e do mercado.</p>
+    <h1>Equipe:</h1>
+    <h4>Matheus</h4>
+    <p class="">Matheus atua como Diretor de Operações e Estratégia, com um perfil altamente analítico e focado em resultados. Formado em administração com ênfase em inovação, ele é responsável por coordenar as operações e definir as diretrizes estratégicas da startup. Matheus é conhecido por sua visão de mercado e habilidade em identificar oportunidades, o que o torna fundamental para o crescimento e a estabilidade da empresa. Ele se dedica a alinhar a equipe e os recursos da startup às tendências mais recentes e às demandas dos clientes.</p>
+    <h4>Pedro</h4>
+    <p>Pedro, Diretor de Tecnologia, é o especialista em desenvolvimento e inovação técnica. Com uma forte formação em engenharia de software e experiência no uso de tecnologias avançadas, como inteligência artificial e blockchain, Pedro é responsável por liderar a criação de produtos e supervisionar a equipe de desenvolvimento. Sua abordagem prática e visão de futuro impulsionam a startup a buscar soluções disruptivas e de ponta, atendendo com precisão às necessidades dos usuários e do mercado.</p>
+</div>
