--- a/ProjetoBackend/Views/Categorias/Delete.cshtml
+++ b/ProjetoBackend/Views/Categorias/Delete.cshtml
@@ -1,27 +1,38 @@
 ﻿@model ProjetoBackend.Models.Categoria
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar";
 }
+<div class="container">
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Categoria</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="CategoriaId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <h1>Deletar</h1>
+
+
+    <div>
+        <h4>Categoria</h4>
+        <hr />
+        <dl class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.Nome)
+            </dt>
+            <dd class="col-12 col-md-2">
+                @Html.DisplayFor(model => model.Nome)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="CategoriaId" />
+            <div class="row">
+
+                <div class="col-12 col-md mt-2">
+                    <input type="submit" value="Delete" class="btn btn-danger w-100" />
+                </div>
+                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                <div class="col col-md mt-2">
+                    <a asp-action="Index" class="text-decoration-none text-light btn btn-primary w-100">voltar</a>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
