--- a/ProjetoBackend/Views/Categorias/Index.cshtml
+++ b/ProjetoBackend/Views/Categorias/Index.cshtml
@@ -3,40 +3,40 @@
 @{
     ViewData["Title"] = "Categoria";
 }
+<div class="container">
 
-<h2>Categoria de Produto</h2>
+    <h2>Categoria de Produto</h2>
 
-<p>
-    <div class="btn btn-lg" style="background: #DC5F00">
-        <a asp-action="Create" class="text-light text-decoration-none">Cadastrar</a>
-    </div>
-</p>
-<table class="table table-responsive table-striped table-dark">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+    <p>
+        <div class="btn btn-lg" style="background: #DC5F00">
+            <a asp-action="Create" class="text-light text-decoration-none">Cadastrar</a>
+        </div>
+    </p>
+    <table class="table table-responsive table-striped table-dark">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    <div class="btn btn-outline-primary">
-                        <a asp-action="Edit" asp-route-id="@item.CategoriaId" class="text-primary text-decoration-none">Editar</a>
-                    </div>
-                    |
-                    <div class="btn btn-outline-danger">
-                        <a asp-action="Delete" asp-route-id="@item.CategoriaId" class="text-danger text-decoration-none">Excluir</a>
-                    </div>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nome)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nome)
+                    </td>
+                    <td>
+
+                        <a asp-action="Edit" asp-route-id="@item.CategoriaId" class="text-primary text-decoration-none btn btn-outline-primary">Editar</a>
+                        |
+                        <a asp-action="Delete" asp-route-id="@item.CategoriaId" class="text-danger text-decoration-none btn btn-outline-danger">Excluir</a>
+
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
