--- a/ProjetoBackend/Views/Clientes/Edit.cshtml
+++ b/ProjetoBackend/Views/Clientes/Edit.cshtml
@@ -69,9 +69,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-4 mt-2">
-                    <div class="btn btn-outline-danger w-100 mt-2">
-                        <a asp-action="Index" class="text-danger text-decoration-none ">Cancelar</a>
-                    </div>
+                    <a asp-action="Index" class="text-danger text-decoration-none btn btn-outline-danger w-100 mt-2">Cancelar</a>
                 </div>
                 <div class="d-sm-none d-md-block col-md-4 mt-2"></div>
                 <div class="col-12 col-md mt-2">
