--- a/ProjetoBackend/Views/Home/Index.cshtml
+++ b/ProjetoBackend/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Página Inicial";
 }
+<div class="container">
 
-<div class="text-center">
-    <h1 class="display-4">ProtMind</h1>
-    <p>Conheça o futuro com o ProtMind com controle total sob seus movimentos em jogos digitais </p>
+    <div class="text-center">
+        <h1 class="display-4">ProtMind</h1>
+        <p>Conheça o futuro com o ProtMind com controle total sob seus movimentos em jogos digitais </p>
 
+    </div>
 </div>
