--- a/ProjetoBackend/Views/Servicos/Delete.cshtml
+++ b/ProjetoBackend/Views/Servicos/Delete.cshtml
@@ -1,33 +1,46 @@
 ﻿@model ProjetoBackend.Models.Servico
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar";
 }
 
-<h1>Delete</h1>
+<h3>Deletar</h3>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Servico</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ValorServico)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ValorServico)
-        </dd>
+        <div class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.Nome)
+            </dt>
+            <dd class="col-12 col-md-2">
+                @Html.DisplayFor(model => model.Nome)
+            </dd>
+        </div>
+        <div class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.ValorServico)
+            </dt>
+            <dd class="col-12 col-md-2">
+                @Html.DisplayFor(model => model.ValorServico)
+            </dd>
+        </div>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="ServicoId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <div class="row">
+
+            <div class="col-12 col-md mt-2">
+                <input type="submit" value="Delete" class="btn btn-danger w-100" />
+            </div>
+            <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+            <div class="col col-md mt-2">
+                <div class="btn btn-primary w-100">
+                    <a asp-action="Index" class="text-decoration-none text-light">voltar</a>
+                </div>
+            </div>
+        </div>
     </form>
 </div>
