--- a/ProjetoBackend/Views/ServicosVendas/Delete.cshtml
+++ b/ProjetoBackend/Views/ServicosVendas/Delete.cshtml
@@ -11,23 +11,39 @@
     <h4>ServicoVenda</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Servico)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Servico.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Venda)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Venda.VendaId)
-        </dd>
+        <div class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.Servico)
+            </dt>
+
+            <dd class="col-12 col-md-2">
+                @Html.DisplayFor(model => model.Servico.Nome)
+            </dd>
+        </div>
+        <div class="row justify-content-evenly">
+            <dt class="col-12 col-md-2">
+                @Html.DisplayNameFor(model => model.Venda)
+            </dt>
+
+            <dd class="col-12 col-md-2">
+                @Html.DisplayFor(model => model.Venda.VendaId)
+            </dd>
+        </div>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="ServicoVendaId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <div class="row">
+
+            <div class="col-12 col-md mt-2">
+                <input type="submit" value="Delete" class="btn btn-danger w-100" />
+            </div>
+            <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+            <div class="col col-md mt-2">
+                <div class="btn btn-primary w-100">
+                    <a asp-action="Index" class="text-decoration-none text-light">voltar</a>
+                </div>
+            </div>
+        </div>
     </form>
 </div>
