--- a/ProjetoBackend/Views/Vendas/Index.cshtml
+++ b/ProjetoBackend/Views/Vendas/Index.cshtml
@@ -37,7 +37,7 @@
                     @Html.DisplayFor(modelItem => item.NotaFiscal)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Cliente.Celular)
+                    @Html.DisplayFor(modelItem => item.Cliente.Nome)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.DataVenda)
