edit view "clientes"

--- a/ProjetoBackend/Views/Compras/Index.cshtml
+++ b/ProjetoBackend/Views/Compras/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Compras</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-lg text-light" style="background: #DC5F00">Cadastrar</a>
+    <a asp-action="Create" class="btn btn-lg text-light btn-1">Cadastrar</a>
 </p>
 <table class="table table-responsive table-dark table-striped">
     <thead>
