--- a/ProjetoBackend/Views/Categorias/Index.cshtml
+++ b/ProjetoBackend/Views/Categorias/Index.cshtml
@@ -8,7 +8,7 @@
     <h2>Categoria de Produto</h2>
 
     <p>
-        <div class="btn btn-lg" style="background: #DC5F00">
+        <div class="btn btn-lg btn-1">
             <a asp-action="Create" class="text-light text-decoration-none">Cadastrar</a>
         </div>
     </p>
