--- a/ProjetoBackend/Views/Clientes/Create.cshtml
+++ b/ProjetoBackend/Views/Clientes/Create.cshtml
@@ -3,93 +3,81 @@
 @{
     ViewData["Title"] = "Adicionar Cliente";
 }
-<h2>Cadastro de Cliente</h2>
+<div class="container">
 
-<hr />
-<div class="row justify-content-center">
-    <div class="row col-md-8 ">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="row">
-                <div class="col-12 col-md-8 mt-2">
-                    <div class="form-group">
-                        <label asp-for="Nome" class="control-label"></label>
-                        <input asp-for="Nome" class="form-control" />
-                        <span asp-validation-for="Nome" class="text-danger"></span>
+    <h2>Cadastro de Cliente</h2>
+
+    <hr />
+    <div class="row justify-content-center">
+        <div class="row col-md-8 ">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="row">
+                    <div class="col-12 col-md-8 mt-2">
+                        <div class="form-group">
+                            <label asp-for="Nome" class="control-label"></label>
+                            <input asp-for="Nome" class="form-control" />
+                            <span asp-validation-for="Nome" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md mt-2">
+                        <div class="form-group">
+                            <label asp-for="CnpjCpf" class="control-label"></label>
+                            <input asp-for="CnpjCpf" class="form-control" />
+                            <span asp-validation-for="CnpjCpf" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-md mt-2">
-                    <div class="form-group">
-                        <label asp-for="CnpjCpf" class="control-label"></label>
-                        <input asp-for="CnpjCpf" class="form-control" />
-                        <span asp-validation-for="CnpjCpf" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-12 col-md-8 mt-2">
+                        <div class="form-group">
+                            <label asp-for="Email" class="control-label"></label>
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md mt-2">
+                        <div class="form-group">
+                            <label asp-for="DataNascimento" class="control-label"></label>
+                            <input type="date" asp-for="DataNascimento" class="form-control" />
+                            <span asp-validation-for="DataNascimento" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-8 mt-2">
-                    <div class="form-group">
-                        <label asp-for="Email" class="control-label"></label>
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
+                <div class="row ">
+                    <div class="col-12 col-md-6 mt-2">
+                        <div class="form-group">
+                            <label asp-for="Celular" class="control-label"></label>
+                            <input asp-for="Celular" class="form-control" oninput="formatarTelefone(this)" id="telefone" />
+                            <span asp-validation-for="Celular" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-md mt-2">
-                    <div class="form-group">
-                        <label asp-for="DataNascimento" class="control-label"></label>
-                        <input type="date" asp-for="DataNascimento" class="form-control" />
-                        <span asp-validation-for="DataNascimento" class="text-danger"></span>
+
+                <div class="form-group">
+                    <input type="hidden" asp-for="DataCadastro" class="form-control" />
+                </div>
+
+                <div class="form-group">
+
+                    <input type="hidden" asp-for="CadastroAtivo" class="form-control" />
+
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md mt-2">
+                        <a asp-action="Index" class="text-decoration-none text-danger btn w-100 btn-outline-danger">Cancelar</a>
+                    </div>
+                    <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                    <div class="col col-md mt-2">
+
+                        <div class="form-group">
+                            <input type="submit" value="Criar" class="btn btn-primary w-100" />
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row ">
-                <div class="col-12 col-md-6 mt-2">
-                    <div class="form-group">
-                        <label asp-for="Celular" class="control-label"></label>
-                        <input asp-for="Celular" class="form-control" oninput="formatarTelefone(this)" id="telefone" />
-                        <span asp-validation-for="Celular" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <input type="hidden" asp-for="DataCadastro" class="form-control" />
-            </div>
-
-            <div class="form-group">
-
-                <input type="hidden" asp-for="CadastroAtivo" class="form-control" />
-
-            </div>
-            <div class="row">
-                <div class="col-12 col-md mt-2">
-                    <a asp-action="Index" class="text-decoration-none text-danger btn w-100 btn-outline-danger">Cancelar</a>
-                </div>
-                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
-                <div class="col col-md mt-2">
-
-                    <div class="form-group">
-                        <input type="submit" value="Criar" class="btn btn-primary w-100" />
-                    </div>
-                </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
-
-
-    <!--
-     <div class="col-md-4">
-         <form asp-action="Create">
-
-
-
-
-
-
-
-         </form>
-     </div>
-     -->
 </div>
 
 
