--- a/ProjetoBackend/Views/Clientes/Delete.cshtml
+++ b/ProjetoBackend/Views/Clientes/Delete.cshtml
@@ -4,92 +4,93 @@
     ViewData["Title"] = "Deletar";
 }
 
+<div class="container">
 
-
-<h3>Deletar</h3>
-<div>
-    <h4>Cliente</h4>
-    <hr />
-    <dl class="row">
-        <div class="row justify-content-evenly">
-            <dt class="col-12 col-md-2">
-                @Html.DisplayNameFor(model => model.Nome)
-            </dt>
-            <dd class="col-12 col-md-3">
-                @Html.DisplayFor(model => model.Nome)
-            </dd>
-        </div>
-        <div class="row justify-content-evenly">
-            <dt class="col-12 col-md-2">
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
-            <dd class="col-12 col-md-3">
-                @Html.DisplayFor(model => model.Email)
-            </dd>
-        </div>
-        <div class="row justify-content-evenly">
-            <dt class="col-12 col-md-2">
-                @Html.DisplayNameFor(model => model.CnpjCpf)
-            </dt>
-            <dd class="col-12 col-md-3">
-                @Html.DisplayFor(model => model.CnpjCpf)
-            </dd>
-        </div>
-        <div class="row justify-content-evenly">
-            <dt class="col-12 col-md-2">
-                @Html.DisplayNameFor(model => model.Celular)
-            </dt>
-            <dd class="col-12 col-md-3">
-                @Html.DisplayFor(model => model.Celular)
-            </dd>
-        </div>
-        <div class="row justify-content-evenly">
-            <dt class="col-12 col-md-2">
-                @Html.DisplayNameFor(model => model.DataNascimento)
-            </dt>
-            <dd class="col-12 col-md-3">
-                @Html.DisplayFor(model => model.DataNascimento)
-            </dd>
-        </div>
-        <div class="row justify-content-evenly">
-            <dt class="col-12 col-md-2">
-                @Html.DisplayNameFor(model => model.DataCadastro)
-            </dt>
-            <dd class="col-12 col-md-3">
-                @Html.DisplayFor(model => model.DataCadastro)
-            </dd>
-        </div>
-        <div class="row justify-content-evenly">
-            <dt class="col-12 col-md-2">
-                @Html.DisplayNameFor(model => model.CadastroAtivo)
-            </dt>
-            <dd class="col-12 col-md-3">
-
-                @{
-                    @if (Model.CadastroAtivo == true)
-                    {
-                        <span>Sim</span>
-                    }
-                    else
-                    {
-                        <span>Não</span>
-                    }
-                }
-            </dd>
-        </div>
-    </dl>
-
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ClienteId" />
-        <div class="row">
-
-            <div class="col-12 col-md mt-2">
-                <input type="submit" value="Delete" class="btn btn-danger w-100" />
+    <h3>Deletar</h3>
+    <div>
+        <h4>Cliente</h4>
+        <hr />
+        <dl class="row">
+            <div class="row justify-content-evenly">
+                <dt class="col-12 col-md-2">
+                    @Html.DisplayNameFor(model => model.Nome)
+                </dt>
+                <dd class="col-12 col-md-3">
+                    @Html.DisplayFor(model => model.Nome)
+                </dd>
             </div>
-            <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
-            <div class="col col-md mt-2">
-                <a asp-action="Index" class="text-decoration-none text-light btn btn-primary w-100">voltar</a>
+            <div class="row justify-content-evenly">
+                <dt class="col-12 col-md-2">
+                    @Html.DisplayNameFor(model => model.Email)
+                </dt>
+                <dd class="col-12 col-md-3">
+                    @Html.DisplayFor(model => model.Email)
+                </dd>
             </div>
-        </div>
-    </form>
+            <div class="row justify-content-evenly">
+                <dt class="col-12 col-md-2">
+                    @Html.DisplayNameFor(model => model.CnpjCpf)
+                </dt>
+                <dd class="col-12 col-md-3">
+                    @Html.DisplayFor(model => model.CnpjCpf)
+                </dd>
+            </div>
+            <div class="row justify-content-evenly">
+                <dt class="col-12 col-md-2">
+                    @Html.DisplayNameFor(model => model.Celular)
+                </dt>
+                <dd class="col-12 col-md-3">
+                    @Html.DisplayFor(model => model.Celular)
+                </dd>
+            </div>
+            <div class="row justify-content-evenly">
+                <dt class="col-12 col-md-2">
+                    @Html.DisplayNameFor(model => model.DataNascimento)
+                </dt>
+                <dd class="col-12 col-md-3">
+                    @Html.DisplayFor(model => model.DataNascimento)
+                </dd>
+            </div>
+            <div class="row justify-content-evenly">
+                <dt class="col-12 col-md-2">
+                    @Html.DisplayNameFor(model => model.DataCadastro)
+                </dt>
+                <dd class="col-12 col-md-3">
+                    @Html.DisplayFor(model => model.DataCadastro)
+                </dd>
+            </div>
+            <div class="row justify-content-evenly">
+                <dt class="col-12 col-md-2">
+                    @Html.DisplayNameFor(model => model.CadastroAtivo)
+                </dt>
+                <dd class="col-12 col-md-3">
+
+                    @{
+                        @if (Model.CadastroAtivo == true)
+                        {
+                            <span>Sim</span>
+                        }
+                        else
+                        {
+                            <span>Não</span>
+                        }
+                    }
+                </dd>
+            </div>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="ClienteId" />
+            <div class="row">
+
+                <div class="col-12 col-md mt-2">
+                    <input type="submit" value="Delete" class="btn btn-danger w-100" />
+                </div>
+                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                <div class="col col-md mt-2">
+                    <a asp-action="Index" class="text-decoration-none text-light btn btn-primary w-100">voltar</a>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
