--- a/ProjetoBackend/Views/Clientes/Index.cshtml
+++ b/ProjetoBackend/Views/Clientes/Index.cshtml
@@ -3,88 +3,90 @@
 @{
     ViewData["Title"] = "Clientes";
 }
+<div class="container">
 
-<div class="mb-4">
-    <form asp-action="Search" method="get" class="row">
-        <div class="col-9 col-md-5 ">
-            <input type="text" class="form-control" name="nome" placeholder="Buscar cliente por nome..." />
-        </div>
-        <div class="col-3 col-md">
-            <button type="submit" class=" btn col-md btn-info"><ion-icon name="search"></ion-icon>Buscar</button>
-        </div>
-    </form>
-</div>
-
-<p>
-    <div class="btn btn-lg" style="background: #DC5F00">
-        <a asp-action="Create" class=" text-light text-decoration-none">Cadastrar</a>
+    <div class="mb-4">
+        <form asp-action="Search" method="get" class="row">
+            <div class="col-9 col-md-5 ">
+                <input type="text" class="form-control" name="nome" placeholder="Buscar cliente por nome..." />
+            </div>
+            <div class="col-3 col-md">
+                <button type="submit" class=" btn col-md btn-info"><ion-icon name="search"></ion-icon>Buscar</button>
+            </div>
+        </form>
     </div>
-</p>
-<table class="table table-responsive table-dark table-striped">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CnpjCpf)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Celular)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataNascimento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataCadastro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CadastroAtivo)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+
+    <p>
+        <div class="btn btn-lg btn-1">
+            <a asp-action="Create" class=" text-light text-decoration-none">Cadastrar</a>
+        </div>
+    </p>
+    <table class="table table-responsive table-dark table-striped">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CnpjCpf)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Celular)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataNascimento)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataCadastro)
-                </td>
-                <td>
-                    @if (item.CadastroAtivo == true)
-                    {
-                        <span>Sim</span>
-                    }
-                    else
-                    {
-                        <span>Não</span>
-                    }
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.ClienteId" class="text-decoration-none text-primary btn btn-outline-primary">Editar</a>
-                    |
-                    <a asp-action="Delete" asp-route-id="@item.ClienteId" class="text-danger text-decoration-none btn btn-outline-danger">Deletar</a>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nome)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CnpjCpf)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Celular)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DataNascimento)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DataCadastro)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CadastroAtivo)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CnpjCpf)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Celular)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DataNascimento)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DataCadastro)
+                    </td>
+                    <td>
+                        @if (item.CadastroAtivo == true)
+                        {
+                            <span>Sim</span>
+                        }
+                        else
+                        {
+                            <span>Não</span>
+                        }
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.ClienteId" class="text-decoration-none text-primary btn btn-outline-primary">Editar</a>
+                        |
+                        <a asp-action="Delete" asp-route-id="@item.ClienteId" class="text-danger text-decoration-none btn btn-outline-danger">Deletar</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
