--- a/ProjetoBackend/Views/Compras/Create.cshtml
+++ b/ProjetoBackend/Views/Compras/Create.cshtml
@@ -3,53 +3,53 @@
 @{
     ViewData["Title"] = "Criar Compra";
 }
+<div class="container">
 
-<h4>Compra</h4>
-<hr />
-<div class="row justify-content-center">
-    <div class="col-md-8">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <div class="form-group">
-                        <label asp-for="FornecedorId" class="control-label"></label>
-                        <select asp-for="FornecedorId" class="form-control" asp-items="ViewBag.FornecedorId"></select>
+    <h4>Compra</h4>
+    <hr />
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="form-group">
+                            <label asp-for="FornecedorId" class="control-label"></label>
+                            <select asp-for="FornecedorId" class="form-control" asp-items="ViewBag.FornecedorId"></select>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="DataCompra" class="control-label"></label>
+                            <input asp-for="DataCompra" class="form-control" />
+                            <span asp-validation-for="DataCompra" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="ValorTotal" class="control-label"></label>
+                            <input type="number" step="0.01" asp-for="ValorTotal" class="form-control" />
+                            <span asp-validation-for="ValorTotal" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-md">
-                    <div class="form-group">
-                        <label asp-for="DataCompra" class="control-label"></label>
-                        <input asp-for="DataCompra" class="form-control" />
-                        <span asp-validation-for="DataCompra" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-12 col-md">
-                    <div class="form-group">
-                        <label asp-for="ValorTotal" class="control-label"></label>
-                        <input type="number" step="0.01" asp-for="ValorTotal" class="form-control" />
-                        <span asp-validation-for="ValorTotal" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
 
 
 
-            <div class="row">
-                <div class="col-12 col-md mt-2">
-                    <div class="btn w-100 btn-outline-danger">
-                        <a asp-action="Index" class="text-decoration-none text-danger ">Cancelar</a>
+                <div class="row">
+                    <div class="col-12 col-md mt-2">
+                            <a asp-action="Index" class="text-decoration-none text-danger btn w-100 btn-outline-danger">Cancelar</a>
                     </div>
-                </div>
-                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
-                <div class="col col-md mt-2">
+                    <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                    <div class="col col-md mt-2">
 
-                    <div class="form-group">
-                        <input type="submit" value="Criar" class="btn btn-primary w-100" />
+                        <div class="form-group">
+                            <input type="submit" value="Criar" class="btn btn-primary w-100" />
+                        </div>
                     </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
 
