--- a/ProjetoBackend/Views/Fornecedors/Create.cshtml
+++ b/ProjetoBackend/Views/Fornecedors/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetoBackend.Models.Fornecedor
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
 }
 <div class="container">
 
