--- a/ProjetoBackend/Views/Fornecedors/Index.cshtml
+++ b/ProjetoBackend/Views/Fornecedors/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ProjetoBackend.Models.Fornecedor>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Fornecedores";
 }
 <div class="container">
 
