--- a/ProjetoBackend/Views/Produtos/Create.cshtml
+++ b/ProjetoBackend/Views/Produtos/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetoBackend.Models.Produto
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
 }
 
 <h1>Produtos</h1>
