--- a/ProjetoBackend/Views/Produtos/Delete.cshtml
+++ b/ProjetoBackend/Views/Produtos/Delete.cshtml
@@ -3,11 +3,11 @@
 @{
     ViewData["Title"] = "Deletar";
 }
+<div class="container">
 
-<h1>Deletar</h1>
+    <h1>Deletar</h1>
 
 
-<div>
     <h4>Produto</h4>
     <hr />
     <dl class="row">
@@ -54,9 +54,7 @@
             </div>
             <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
             <div class="col col-md mt-2">
-                <div class="btn btn-primary w-100">
-                    <a asp-action="Index" class="text-decoration-none text-light">voltar</a>
-                </div>
+                <a asp-action="Index" class="text-decoration-none text-light btn btn-primary w-100">voltar</a>
             </div>
         </div>
     </form>
