--- a/ProjetoBackend/Views/Servicos/Create.cshtml
+++ b/ProjetoBackend/Views/Servicos/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetoBackend.Models.Servico
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Servoços";
 }
 
 <h1>Serviços</h1>
