--- a/ProjetoBackend/Views/Servicos/Delete.cshtml
+++ b/ProjetoBackend/Views/Servicos/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetoBackend.Models.Servico
 
 @{
-    ViewData["Title"] = "Deletar";
+    ViewData["Title"] = "Deletar Serviços";
 }
 
 <h3>Deletar</h3>
