--- a/ProjetoBackend/Views/Servicos/Edit.cshtml
+++ b/ProjetoBackend/Views/Servicos/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetoBackend.Models.Servico
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Serviços";
 }
 
 <h1>Editar Serviços</h1>
