--- a/ProjetoBackend/Views/ServicosVendas/Create.cshtml
+++ b/ProjetoBackend/Views/ServicosVendas/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetoBackend.Models.ServicoVenda
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Serviços Vendidos";
 }
 
 <h1>Create</h1>
@@ -14,11 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ServicoId" class="control-label"></label>
-                <select asp-for="ServicoId" class ="form-control" asp-items="ViewBag.ServicoId"></select>
+                <select asp-for="ServicoId" class="form-control" asp-items="ViewBag.ServicoId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="VendaId" class="control-label"></label>
-                <select asp-for="VendaId" class ="form-control" asp-items="ViewBag.VendaId"></select>
+                <select asp-for="VendaId" class="form-control" asp-items="ViewBag.VendaId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -32,5 +32,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
