--- a/ProjetoBackend/Views/ServicosVendas/Edit.cshtml
+++ b/ProjetoBackend/Views/ServicosVendas/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetoBackend.Models.ServicoVenda
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
 <h1>Edit</h1>
@@ -35,5 +35,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
