--- a/ProjetoBackend/Views/ServicosVendas/Index.cshtml
+++ b/ProjetoBackend/Views/ServicosVendas/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ProjetoBackend.Models.ServicoVenda>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Serviços Vendidos";
 }
 
 <h1>Vendas</h1>
