--- a/ProjetoBackend/Views/Fornecedors/Edit.cshtml
+++ b/ProjetoBackend/Views/Fornecedors/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetoBackend.Models.Fornecedor
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 <div class="container">
 
