--- a/ProjetoBackend/Views/Produtos/Edit.cshtml
+++ b/ProjetoBackend/Views/Produtos/Edit.cshtml
@@ -1,63 +1,63 @@
 ﻿@model ProjetoBackend.Models.Produto
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
+<div class="container">
 
-<h1>Editar Produto</h1>
+    <h1>Editar Produto</h1>
 
-<hr />
-<div class="row justify-content-center">
-    <div class="col-md-8">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ProdutoId" />
-            <div class="row">
-                <div class="col-12 col-md-8 mt-2">
-                    <div class="form-group">
-                        <label asp-for="Nome" class="control-label"></label>
-                        <input asp-for="Nome" class="form-control" />
-                        <span asp-validation-for="Nome" class="text-danger"></span>
+    <hr />
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="ProdutoId" />
+                <div class="row">
+                    <div class="col-12 col-md-8 mt-2">
+                        <div class="form-group">
+                            <label asp-for="Nome" class="control-label"></label>
+                            <input asp-for="Nome" class="form-control" />
+                            <span asp-validation-for="Nome" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md mt-2">
+                        <div class="form-group">
+                            <label asp-for="Preco" class="control-label"></label>
+                            <input type="number" step="0.01" asp-for="Preco" class="form-control" />
+                            <span asp-validation-for="Preco" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-md mt-2">
-                    <div class="form-group">
-                        <label asp-for="Preco" class="control-label"></label>
-                        <input type="number" step="0.01" asp-for="Preco" class="form-control" />
-                        <span asp-validation-for="Preco" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-12 col-md-8 mt-2">
+                        <div class="form-group">
+                            <label asp-for="Estoque" class="control-label"></label>
+                            <input asp-for="Estoque" class="form-control" />
+                            <span asp-validation-for="Estoque" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md mt-2">
+                        <div class="form-group">
+                            <label asp-for="CategoriaId" class="control-label"></label>
+                            <select asp-for="CategoriaId" class="form-control" asp-items="ViewBag.CategoriaId"></select>
+                            <span asp-validation-for="CategoriaId" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-8 mt-2">
-                    <div class="form-group">
-                        <label asp-for="Estoque" class="control-label"></label>
-                        <input asp-for="Estoque" class="form-control" />
-                        <span asp-validation-for="Estoque" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-12 col-md mt-2">
+                        <a asp-action="Index" class="text-danger text-decoration-none btn btn-outline-danger w-100">Cancelar</a>
+                    </div>
+                    <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                    <div class="col-12 col-md mt-2">
+                        <div class="form-group">
+                            <input type="submit" value="Salvar" class="btn btn-primary w-100" />
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-md mt-2">
-                    <div class="form-group">
-                        <label asp-for="CategoriaId" class="control-label"></label>
-                        <select asp-for="CategoriaId" class="form-control" asp-items="ViewBag.CategoriaId"></select>
-                        <span asp-validation-for="CategoriaId" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md mt-2">
-                    <div class="btn btn-outline-danger w-100">
-                        <a asp-action="Index" class="text-danger text-decoration-none">Cancelar</a>
-                    </div>
-                </div>
-                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
-                <div class="col-12 col-md mt-2">
-                    <div class="form-group">
-                        <input type="submit" value="Salvar" class="btn btn-primary w-100" />
-                    </div>
-                </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
 
