--- a/ProjetoBackend/Views/ServicosVendas/Delete.cshtml
+++ b/ProjetoBackend/Views/ServicosVendas/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetoBackend.Models.ServicoVenda
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar";
 }
 
 <h1>Delete</h1>
