--- a/ProjetoBackend/Views/Vendas/Index.cshtml
+++ b/ProjetoBackend/Views/Vendas/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ProjetoBackend.Models.Venda>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Vendas";
 }
 
 <h1>Vendas</h1>
