--- a/ProjetoBackend/Views/Servicos/Create.cshtml
+++ b/ProjetoBackend/Views/Servicos/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjetoBackend.Models.Servico
 
 @{
-    ViewData["Title"] = "Servoços";
+    ViewData["Title"] = "Criar";
 }
 <div class="container">
 
